k8s/go-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server
  labels:
    app: go-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-server
  template:
    metadata:
      labels:
        app: go-server
    spec:
      containers:
      - image: huhuhu0420/go-server:latest
        name: go-server
        ports:
        - containerPort: 5000
