k8s/pgbouncer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer
  labels:
    app: pgbouncer
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: pgbouncer
