k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: sads.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-server
                port:
                  number: 5000
